fix(menu): make menu group text visible

--- a/src/framework/theme/styles/themes/_default.scss
+++ b/src/framework/theme/styles/themes/_default.scss
@@ -422,7 +422,7 @@ $theme: (
   menu-item-divider-width: 0.0625rem,
 
   menu-submenu-background-color: menu-background-color,
-  menu-submenu-text-color: text-alternate-color,
+  menu-submenu-text-color: text-color,
   menu-submenu-margin: 0,
   menu-submenu-padding: 0 1.25rem,
 
